# gridtokenx-hackathon

./: .dockerignore  .env.example  .gitignore  Anchor.toml  Cargo.toml  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_REPORT.md  DEPLOYMENT_SUMMARY.md  DEVNET.md  INITIALIZATION_STATUS.md  PITCH.md  QUICK_REFERENCE.md  QWEN.md  README.md  STACK_OVERFLOW_FIX.md  STATUS.md  TEST_RESULTS.md  currency-mint.json  derive_pdas.ts  package.json  pnpm-lock.yaml  tsconfig.json
docs/: test.md
docs/programs/: README.md  auction-clearing.md  energy-token.md  governance.md  oracle.md  registry.md  trading.md  transaction-settlement.md
docs/public/metadata/: grx.json
programs/energy-token/: Cargo.toml
programs/energy-token/src/: error.rs  events.rs  lib.rs  state.rs
programs/governance/: Cargo.toml
programs/governance/src/: contexts.rs  errors.rs  events.rs  lib.rs
programs/governance/src/handlers/: authority.rs  config.rs  erc.rs  initialize.rs  mod.rs  stats.rs
programs/governance/src/state/: erc_certificate.rs  meter_account.rs  mod.rs  poa_config.rs
programs/oracle/: Cargo.toml
programs/oracle/src/: error.rs  events.rs  lib.rs  state.rs
programs/registry/: Cargo.toml
programs/registry/src/: error.rs  events.rs  lib.rs  state.rs
programs/trading/: Cargo.toml
programs/trading/src/: error.rs  events.rs  lib.rs
programs/trading/src/instructions/: initialize_shard.rs  initialize_zone_shard.rs  mod.rs  settle_offchain.rs  sharded_match_orders.rs  submit_sharded_limit_order.rs
programs/trading/src/state/: config.rs  market.rs  mod.rs  nullifier.rs  order.rs  zone_market.rs
scripts/: bootstrap.ts  check-time.ts  debug-meter-setup.ts  deploy-production.sh  devnet-set-metadata.ts  fix-gateway.ts  fix_zone_1.ts  get_pdas.ts  init-devnet-energy-token.ts  init-devnet.ts  init-energy-trading.ts  init-governance.ts  init-manual.ts  init-market.ts  init-oracle.ts  init-platform.ts  init-poa.ts  init-programs.ts  init-registry-fixed.ts  init-registry.ts  init-shards-fixed.ts  init-shards.ts  init-token.ts  init-zone-market.ts  initialize-all-zones.ts  initialize-sharding.ts  mint-tokens.ts  redeploy-alpha.sh  redeploy-energy-token-devnet.sh  run-tests.sh  set-metadata.ts  setup-alts.ts  test-integration.ts  test-litesvm.ts  test-local.sh  update-gateway.ts  update-metadata.ts  update-meter-reading.ts
shared/compute-debug/: Cargo.toml
shared/compute-debug/src/: lib.rs
shared/core/: Cargo.toml
shared/core/src/: lib.rs  version.rs
tests/: blockbench.ts  functional-test.ts  governance.ts  oracle.ts  registry_sharding.ts  smallbank.ts  staking.ts  tpc_stress_test.ts  verify-deployment.ts
tests/utils/: governance.ts
