[workspace]
members = [
    "programs/energy-token",
    "programs/governance",
    "programs/oracle",
    "programs/registry",
    "programs/trading",
]
exclude = ["programs/dependency-lock"]
resolver = "2"

[workspace.dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }
solana-program = "1.18.17"
solana-instruction = "1.18.17"
spl-token = "4.0.0"
spl-associated-token-account = "3.0.4"
mpl-token-metadata = "4.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
winnow = "=0.6.13"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
