[package]
name = "energy-token"
version = "0.1.1"
description = "Energy Token program for P2P Energy Trading - SPL token wrapper"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "energy_token"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
anchor-debug = []
custom-heap = []
custom-panic = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
localnet = ["compute-debug/localnet"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
spl-token = { workspace = true }
mpl-token-metadata = { workspace = true }
base64 = { workspace = true }
bytemuck = { version = "1.16", features = ["derive"] }
compute-debug = { path = "../../shared/compute-debug", optional = true }
