[package]
name = "trading"
version = "0.1.1"
description = "Trading program for P2P Energy Trading - Order book and marketplace"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trading"

[features]
cpi = ["no-entrypoint"]
no-entrypoint = []
anchor-debug = []
custom-panic = []
custom-heap = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
localnet = ["compute-debug/localnet", "test-skip-zk"]
test-skip-zk = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
spl-token = { workspace = true }

constant_time_eq = "0.3.1"
blake3 = "=1.5.5"

proc-macro-crate = "=3.2.0"
indexmap = "2.7"

sha2 = "0.10"
hmac = "0.12"
base64 = { workspace = true }
hex = "0.4"
bytemuck = { version = "1.16", features = ["derive"] }
compute-debug = { path = "../../shared/compute-debug", optional = true }
governance = { path = "../governance", features = ["cpi"] }
solana-zk-token-sdk = "1.18.26"
